Change css layout for nav bar

--- a/test_yourself/templates/base.html
+++ b/test_yourself/templates/base.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
-<a href="/add_test">Add test</a>
-<a href="/drivers_test">Driver's test</a>
+<ul class="nav">
+    <li><a href="/add_test">Add test</a></li>
+    <li><a href="/drivers_test">Driver's test</a></li>
+</ul>
 {% block content %}
 {% endblock %}
 </body>
