--- a/test_yourself/static/styles.css
+++ b/test_yourself/static/styles.css
@@ -10,7 +10,7 @@ input {
     margin: 10px;
 }
 
-input[type=submit]  {
+input[type=submit] .link {
   background-color: #c6cc5a;
   border: none;
   border-radius: 10px;
@@ -19,4 +19,39 @@ input[type=submit]  {
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
+}
+
+h1 {
+    text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #c5c96f;
 }
