Fix name add_new_topic in label(base.html) add submit and route to it

--- a/test_yourself/templates/add_new_topic.html
+++ b/test_yourself/templates/add_new_topic.html
@@ -4,5 +4,6 @@
 <form action="add_new_topic" method="post">
   <label for="topic">Enter name of your topic</label>
   <input type = "text" id="topic" name = "topic" /><br>
+  <input type="submit" value="ADD">
 </form>
 {% endblock %}
