--- a/test_yourself/templates/base.html
+++ b/test_yourself/templates/base.html
@@ -9,7 +9,7 @@
 <ul class="nav">
     <li><a href="/add_test">Add test</a></li>
     <li><a href="/drivers_test">Driver's test</a></li>
-    <li><a href="/add_new_topic">Driver's test</a></li>
+    <li><a href="/add_new_topic">Add new topic</a></li>
 </ul>
 {% block content %}
 {% endblock %}
