Change usage of get_db and show all tables names in template

--- a/test_yourself/templates/add_new_topic.html
+++ b/test_yourself/templates/add_new_topic.html
@@ -6,4 +6,7 @@
   <input type = "text" id="topic" name = "topic" /><br>
   <input type="submit" value="ADD">
 </form>
+{% for topic in all_topics %}
+<span>{{ topic }}</span>
+{% endfor %}
 {% endblock %}
