--- a/test_yourself/templates/add_new_topic.html
+++ b/test_yourself/templates/add_new_topic.html
@@ -3,10 +3,10 @@
 {% block content %}
 <form action="add_new_topic" method="post">
   <label for="topic">Enter name of your topic</label>
-  <input type = "text" id="topic" name = "topic" /><br>
+  <input type = "text" id="topic" name = "topic" placeholder="Please separate the words by _ "/><br>
   <input type="submit" value="ADD">
 </form>
 {% for topic in all_topics %}
-<span>{{ topic }}</span>
+<h3>{{ topic }}</h3>
 {% endfor %}
 {% endblock %}
