--- a/test_yourself/templates/base.html
+++ b/test_yourself/templates/base.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Driver's test</title>
-    <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
 <ul class="nav">
     <li><a href="/add_test">Add test</a></li>
-    <li><a href="/drivers_test">Driver's test</a></li>
+    <li><a href="/drivers_test/drivers_test">Driver's test</a></li>
     <li><a href="/add_new_topic">Add new topic</a></li>
 </ul>
 {% block content %}
