--- a/test_yourself/templates/add_new_topic.html
+++ b/test_yourself/templates/add_new_topic.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if msg %}
+<h3>{{ msg }}</h3>
+{% endif %}
 <form action="add_new_topic" method="post">
   <label for="topic">Enter name of your topic</label>
   <input type = "text" id="topic" name = "topic" /><br>
