--- a/test_yourself/templates/add_new_topic.html
+++ b/test_yourself/templates/add_new_topic.html
@@ -5,7 +5,7 @@
 <h3>{{ msg }}</h3>
 {% endif %}
 <form action="add_new_topic" method="post">
-  <label for="topic">Enter name of your topic</label>
+  <label for="topic">Enter name of your topic</label><br>
   <input type = "text" id="topic" name = "topic" /><br>
   <input type="submit" value="ADD">
 </form>
