Change function in login_service

--- a/test_yourself/templates/login.html
+++ b/test_yourself/templates/login.html
@@ -1,8 +1,8 @@
-{% extends "base.html %}
+{% extends "base.html" %}
 
 
 {% block content %}
-<h3 class="title">Login</h3>
+<h3>Login</h3>
 <div class="box">
     {% with messages = get_flashed_messages() %}
         {% if messages %}
