--- a/test_yourself/static/styles.css
+++ b/test_yourself/static/styles.css
@@ -87,7 +87,7 @@ li a:hover {
   background: orange;
 }
 
-input[type=text] {
+input[type=text] input[type=password]{
   width: 30%;
   padding: 12px 20px;
   margin: 8px 0;
